--- a/assets/style.css
+++ b/assets/style.css
@@ -21,10 +21,7 @@ header {
 }
 
 .logo {
-   margin: 20px 50px;
-   fill: #ff000f;
-   width: 5rem;
-   height: 1.875rem;
+   margin: 10px 50px;
 }
 
 #chart {
@@ -116,4 +113,11 @@ a{
 #MoreContainer:hover{
    background-color: #bb2924;
    cursor:pointer;
+}
+
+#disclaimer {
+   font-size: 12px;
+   color: #333;
+   text-align: center;
+   margin: 20px 0;
 }
