--- a/assets/style.css
+++ b/assets/style.css
@@ -123,7 +123,7 @@ a{
    margin: 20px 0;
 }
 
-#Controllers_Choice {
+#Controllers_CheckBox {
    text-align: center;
 }
 
@@ -132,4 +132,31 @@ input[type="checkbox" i] {
    height: 16px;
    border-color: #bababa;
    accent-color: #2a35ff;
+}
+
+#Reset {
+   display: inline-flex;
+   height: 40px;
+   padding: 12px 20px;
+   justify-content: center;
+   align-items: center;
+   border-radius: 20px;
+   background: #D9D9D9;
+   border: 0;
+   font-size: 14px;
+   color: #1F1F1F;
+   cursor: pointer;
+}
+
+#Reset:hover:active {
+   background: #B4B4B4;
+}
+
+#Reset:hover {
+   background: #C5C5C5;
+}
+
+#Chart_Tools {
+   text-align: center;
+   margin: 10px 0;
 }
