--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,13 @@
 body {
-   display: block;
+   display: flex;
+   flex-direction: column;
    margin: 0;
    background-color: white;
    color: #0f0f0f;
    word-spacing: normal;
    word-break: break-word;
    font-family: ABBvoice-Medium, sans-serif;
-   overflow-y: scroll;
+   height: 100vh;
 }
 
 header {
@@ -25,10 +26,10 @@ header {
 }
 
 .chart-container {
-   width: 98%;
    margin: 5px;
    padding: 10px;
-   height: 100%;
+   flex-grow: 1;
+   width: 100%;
 }
 
 #container {
@@ -36,19 +37,21 @@ header {
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
+   flex-grow: 1;
 }
 
 .tabcontent {
-   display: none;
-   flex-basis: 75%;
-   width: 75%;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
    min-width: 730px;
+   flex-grow: 1;
+   width: 100%;
 }
 
 #infoWindow {
-   flex-basis: 20%;
-   width: 20%;
-   margin: 20px;
+   flex-basis: 25%;
+   margin: 10px;
    margin-top: 25px;
    padding: 10px;
    box-shadow: 0 0 2px 0 rgb(0 0 0 / 30%);
@@ -57,6 +60,17 @@ header {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
+}
+
+#chartPanel {
+   flex-basis: 70%;
+   margin: 10px;
+   flex-grow: 1;
+   text-align: justify;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: center;
 }
 
 .tab {
@@ -131,7 +145,7 @@ a {
    font-size: 12px;
    color: #333;
    text-align: center;
-   margin: 20px 0;
+   margin: 10px 0;
 }
 
 #Controllers_CheckBox {
@@ -157,6 +171,7 @@ input[type="checkbox" i] {
    font-size: 14px;
    color: #1F1F1F;
    cursor: pointer;
+   margin: 10px;
 }
 
 #Reset:hover:active {
@@ -169,7 +184,9 @@ input[type="checkbox" i] {
 
 #Chart_Tools {
    text-align: center;
-   margin: 10px 0;
+   margin-top: auto;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 .controller_supported {
