--- a/assets/style.css
+++ b/assets/style.css
@@ -26,13 +26,21 @@ header {
 }
 
 .chart-container {
-   margin: 5px;
-   padding: 10px;
-   flex-grow: 1;
    width: 100%;
+   border: 1px solid pink;
+   flex-grow: 1;
 }
 
-#container {
+#Chart_Tools {
+   text-align: center;
+   margin-top: auto;
+   margin-left: auto;
+   margin-right: auto;
+   width: 100%;
+   border: 1px solid orange;
+}
+
+#app-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
@@ -40,46 +48,36 @@ header {
    flex-grow: 1;
 }
 
-.tabcontent {
-   display: flex;
-   flex-direction: row;
-   flex-wrap: wrap;
-   min-width: 730px;
-   flex-grow: 1;
-   width: 100%;
-}
-
-#infoWindow {
-   flex-basis: 25%;
-   margin: 10px;
-   margin-top: 25px;
+#infoPanel {
+   flex-basis: 10%;
+   margin: 20px;
    padding: 10px;
    box-shadow: 0 0 2px 0 rgb(0 0 0 / 30%);
-   flex-grow: 1;
    text-align: justify;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
+   flex-grow: 1;
+   min-width: 300px;
 }
 
-#chartPanel {
+#chartAndToolsPanel {
    flex-basis: 70%;
-   margin: 10px;
-   flex-grow: 1;
    text-align: justify;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
+   flex-grow: 1;
 }
 
-.tab {
+#navigation-bar {
    overflow: hidden;
    text-align: center;
    margin: 0 auto;
 }
 
-.tab button {
+#navigation-bar button {
    background-color: inherit;
    float: center;
    border: none;
@@ -92,11 +90,11 @@ header {
    width: 150px
 }
 
-.tab button:hover {
+#navigation-bar button:hover {
    box-shadow: inset 0 -4px 0 #ff000f;
 }
 
-.tab button.active {
+#navigation-bar button.active {
    box-shadow: inset 0 -4px 0 #ff000f;
 }
 
@@ -180,13 +178,6 @@ input[type="checkbox" i] {
 
 #Reset:hover {
    background: #C5C5C5;
-}
-
-#Chart_Tools {
-   text-align: center;
-   margin-top: auto;
-   margin-left: auto;
-   margin-right: auto;
 }
 
 .controller_supported {
